--- a/sample.html
+++ b/sample.html
@@ -22,7 +22,7 @@
 		
 		<div>
 		<input type="email" name="" required="">
-		<label>Email id</label>   
+		<label>Email ID</label>   
 		</div>
 		<div>
 			<select name="MESS">
@@ -30,7 +30,7 @@
   			<option value="LC">LC</option>
   			<option value="TAGORE">TAGORE</option>
   			<option value="SUKHNA">SUKHNA</option>
-		</select>
+		</select><br><br>
 
 		
 	<div>
